--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                         <h3 class="animate-element delay7 fadeInUp">โรงเรียนดาราสมุทร ศรีราชา</h3>
                                         <p class="animate-element delay8 fadeInUp">วัน เดือน ปีเกิด<b>::)</b>  25 พฤษภาคม 2548.</p>
                                         <p class="animate-element delay8 fadeInUp">ชื่อเล่น<b>::)</b>  ไอรัก.</p>
-                                        <p class="animate-element delay8 fadeInUp">คติประจำใจ<b>::)</b>  อนาคตขึ้นอยู่กับสิ่งที่เราทำในปัจจุบัน.</p>
+                                        <p class="animate-element delay8 fadeInUp">คติประจำใจ<b>::)</b>  work hard play hard</p>
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
                                             <a href="https://www.facebook.com/profile.php?id=100026108662959"><i class="fab fa-facebook-f"></i></a>
                                             <a href="https://www.instagram.com/iraklalalove/"><i class="fab fa-instagram"></i></a>
@@ -140,7 +140,7 @@
                                         <div class="section-title mb-25">
                                             <h2 class="slide-title animate-element delay5 fadeInUp">กิจกรรมพักผ่อน <span class="text-typed a-typed a-typed-services" data-text="กิจวัตร"></span> ในชีวิตประจำวันทั่วไป.</h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">โปรดปราน การดำเนินชีวิตแบบไลท์สไตล์ ตามธรรมชาติ, ธรรมดาๆ แบบชิวๆ <b>ไม่หรูหรา แต่เรียบง่าย.</b></p>
+                                        <p class="animate-element delay6 fadeInUp">โปรดปราน การดำเนินชีวิตแบบสนุกสนาน ในเมืองก็ได้ ธรรมชาติก็ดี, ธรรมดาๆ ชิวกับเพื่อนๆ  <b>ชอบความสบายแต่ก็ลุยได้หมด</b></p>
                                         <div class="our-services animate-element delay8 fadeInUp">
                                             <div class="service-item">
                                                 <div class="icon">
@@ -152,19 +152,19 @@
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon2.png" alt="Icon">
                                                 </div>
-                                                <h4>เล่นเฟสต์บุ๊ค</h4>
+                                                <h4>เล่นเกม</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon3.png" alt="Icon">
                                                 </div>
-                                                <h4>ดูยูทูป</h4>
+                                                <h4>ดูซีรีส์</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon4.png" alt="Icon">
                                                 </div>
-                                                <h4>ว่ายน้ำ</h4>
+                                                <h4>เต้น</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -181,9 +181,9 @@
                                     <div class="skill-content animate-element delay5 fadeInUp">
                                         <div class="section-title mb-25">
                                             <span class="sub-title mb-45">ทักษะพิเศษ</span>
-                                            <h2 class="slide-title animate-element delay5 fadeInUp">ฝึกฝน เรียนรู้ปฏิบัติ กลายเป็น <span class="text-typed a-typed a-typed-skills" data-text="ทักษะความรู้."></span></h2>
+                                            <h2 class="slide-title animate-element delay5 fadeInUp">ฝึกฝน เรียนรู้ปฏิบัติ เพื่อเป็น <span class="text-typed a-typed a-typed-skills" data-text="เทพคริกซี่."></span></h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">ความสามารถพิเศษ เป็นเครื่องมือยืนยัน ถึงประสบการณ์ ความรู้แต่ละบุคคล บ่งบอกถึง<b>ทักษะเฉพาะ.</b></p>
+                                        <p class="animate-element delay6 fadeInUp">ความพยายยามอยู่ที่ไหน ความพยายามอยู่ที่นั่น<b>ฝากไว้ให้คิสส์ โชคดีมีชัยโชคชัยมีวัวค่ะ.</b></p>
                                         <div class="bar-list a-progressbar pt-5 animate-element delay9 fadeInUp">
                                             <div class="bar-item">
                                                 <div class="row">
@@ -196,7 +196,7 @@
                                             </div>
                                             <div class="bar-item">
                                                 <div class="row">
-                                                    <div class="col bar-item-title">ภาษาญี่่ปุ่น</div>
+                                                    <div class="col bar-item-title">ภาษาอังกฤษ</div>
                                                     <div class="col-auto text-right bar-item-value">81%</div>
                                                 </div>
                                                 <div class="progress">
@@ -249,7 +249,7 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item animate-element delay5 fadeInUp">
-                                                <span class="years">2019-2022</span>
+                                                <span class="years">2021-2023</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">มัธยมศึกษาตอนปลาย</span>
                                                     <h4 class="subject">แผนการเรียนจีน-อังกฤษ</h4>
@@ -258,12 +258,12 @@
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item animate-element delay8 fadeInUp">
-                                                <span class="years">2016-2019</span>
+                                                <span class="years">2018-2020</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">มัธยมศึกษาตอนต้น</span>
-                                                    <h4 class="subject">แผนการเรียนวิทย์-คณิต</h4>
+                                                    <h4 class="subject">แผนการเรียนจีน-อังกฤษ</h4>
                                                     <h6 class="institution">โรงเรียนดาราสมุทร</h6>
-                                                    <p>วิทยาศาตร์ คณิตศาสตร์พื้นฐาน สิ่งมีชีวิต สสาร แรงโน้มถ่วง การบวก ลบ คูณ หาร ทศนิยม เรขาคณิตวิเคราะห์ .</p>
+                                                    <p>ทักษะฟัง พูด อ่าน เขียน ดานภาษาจีน อังกฤษ และแกรมมา ไวยากรด้านภาษา วัฒนธรรมต่างชาติ.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -277,7 +277,7 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item beahance animate-element delay7 fadeInUp">
-                                                <span class="years">2013-2016</span>
+                                                <span class="years">2008-2011</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">ระดับก่อนประถมศึกษา</span>
                                                     <h4 class="subject">โรงเรียนดาราสมุทร</h4>
@@ -285,7 +285,7 @@
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item dribbble animate-element delay10 fadeInUp">
-                                                <span class="years">2010-2013</span>
+                                                <span class="years">2012-2017</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">ระดับประถมศึกษา</span>
                                                     <h4 class="subject">โรงเรียนดาราสมุทร</h4>
@@ -469,8 +469,8 @@
                                    <h2>ช่องทางการติดต่อ สื่อสาร</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">ศรีราชา, ชลบุรี</span>
-                               <h3 class="animate-element delay6 fadeInUp">pattanadevelop@gmail.com</h3>
-                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-7247-8128</h4>
+                               <h3 class="animate-element delay6 fadeInUp">irakanavila@gmail.com</h3>
+                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-4946-1442</h4>
                                <!--<div class="social-style-two mt-25 animate-element delay11 fadeInUp">
                                     <a href="#"><img src="assets/images/contact/social-dribbble.png" alt="Social"></a>
                                     <a href="#"><img src="assets/images/contact/social-behance.png" alt="Social"></a>
