--- a/index-en.html
+++ b/index-en.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="description" content="Port Folio, CV, Resume, Profiles, Portfolio" />
-    <meta name="author" content="Mr.Pattana Boonthung">
+    <meta name="author" content="Miss Anavila Ungjaipakdee">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!--====== Title ======-->
@@ -82,8 +82,8 @@
                         <div class="container">
                             <div class="number-email-cv">
                                 <ul class="number-email">
-                                    <li>Call me:(+66) 09-7247-8128</li>
-                                    <li>pattanadevelop@gmail.com</li>
+                                    <li>Call me:(+66) 09-4946-1442</li>
+                                    <li>irakanavila@gmail.com</li>
                                 </ul>
                                     <li><a href="index.html">Thai</a> | <a href="index-en.html">English</a></li>
                             </div>
@@ -91,15 +91,14 @@
                                 <div class="col-lg-5">
                                     <div class="about-content pt-100 rpt-0 animate-element delay5 fadeInUp">
                                         <span class="sub-title mb-15 animate-element delay3 fadeInUp">About Me</span>
-                                        <h2 class="slide-title animate-element delay5 fadeInUp">Hi,<br> I’m <span class="text-typed a-typed a-typed-about" data-text="Pattana Boonthung"></span></h2>
+                                        <h2 class="slide-title animate-element delay5 fadeInUp">Hi,<br> I’m <span class="text-typed a-typed a-typed-about" data-text="Anavila Ungjaipakdee"></span></h2>
                                         <h3 class="animate-element delay7 fadeInUp">Darasamutr School</h3>
-                                        <p class="animate-element delay8 fadeInUp">Birthday<b>:</b>  10 August 1992.</p>
-                                        <p class="animate-element delay8 fadeInUp">Nickname<b>:</b>  Ma-Toy.</p>
-                                        <p class="animate-element delay8 fadeInUp">Epigram<b>:</b>  The future depends on what we do in the present.</p>
+                                        <p class="animate-element delay8 fadeInUp">Birthday<b>:</b>  25 May 2005.</p>
+                                        <p class="animate-element delay8 fadeInUp">Nickname<b>:</b>  Irak.</p>
+                                        <p class="animate-element delay8 fadeInUp">Epigram<b>:</b>  work hard play hard.</p>
                                         <div class="social-style-one mt-55 rmt-35 animate-element delay10 fadeInUp">
-                                            <a href="https://www.facebook.com/sirachadevelop"><i class="fab fa-facebook-f"></i></a>
-                                            <a href="https://www.twitter.com/sirachadevelop"><i class="fab fa-twitter"></i></a>
-                                            <a href="https://www.instagram/sirachadevelop"><i class="fab fa-instagram"></i></a>
+                                            <a href="https://www.facebook.com/profile.php?id=100026108662959"><i class="fab fa-facebook-f"></i></a>
+                                            <a href="https://www.instagram.com/iraklalalove/"><i class="fab fa-instagram"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -147,19 +146,19 @@
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon2.png" alt="Icon">
                                                 </div>
-                                                <h4>Facebook</h4>
+                                                <h4>Games</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon3.png" alt="Icon">
                                                 </div>
-                                                <h4>Youtube</h4>
+                                                <h4>Series</h4>
                                             </div>
                                             <div class="service-item">
                                                 <div class="icon">
                                                     <img src="assets/images/lifestyle/service-icon4.png" alt="Icon">
                                                 </div>
-                                                <h4>Swimming</h4>
+                                                <h4>Dance</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -178,7 +177,7 @@
                                             <span class="sub-title mb-45">Skills</span>
                                             <h2 class="slide-title animate-element delay5 fadeInUp">i am good at fit with few <span class="text-typed a-typed a-typed-skills" data-text="skills."></span></h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">All have good skills to make sure satisfied their clints, I am also specialised few <b>skills.</b></p>
+                                        <p class="animate-element delay6 fadeInUp">All have good skills to make sure satisfied their clints, I am also specialised few <b>Krixi Master.</b></p>
                                         <div class="bar-list a-progressbar pt-5 animate-element delay9 fadeInUp">
                                             <div class="bar-item">
                                                 <div class="row">
@@ -244,7 +243,7 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item animate-element delay5 fadeInUp">
-                                                <span class="years">2019-2022</span>
+                                                <span class="years">2021-2023</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Secondary School</span>
                                                     <h4 class="subject">English-Chinese Program</h4>
@@ -253,12 +252,12 @@
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item animate-element delay8 fadeInUp">
-                                                <span class="years">2016-2019</span>
+                                                <span class="years">2018-2020</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Secondary School</span>
-                                                    <h4 class="subject">Math-Science Program</h4>
+                                                    <h4 class="subject">English-Chinese Program</h4>
                                                     <h6 class="institution">Darasamutr School</h6>
-                                                    <p>Mathemetics Calculus, geometry, Probabilities, Physical science and biological sciences.</p>
+                                                    <p>English communication, coversation, Gramma,  Chinese communication, Speaking.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -272,15 +271,15 @@
                                         </div>
                                         <div class="edu-experi-wrap">
                                             <div class="edu-experi-item beahance animate-element delay7 fadeInUp">
-                                                <span class="years">2013-2016</span>
+                                                <span class="years">2008-2011</span>
                                                 <div class="vacancy-content">
-                                                    <span class="title">Kingdergarten School</span>
+                                                    <span class="title">Kindergarten School</span>
                                                     <h4 class="subject">Darasamutr School</h4>
                                                     <p>Life Skills Studies, Self Help, Learning and Speaking, Basic Communication, Number counting, Color classification, Balance, Basic Languages.</p>
                                                 </div>
                                             </div>
                                             <div class="edu-experi-item dribbble animate-element delay10 fadeInUp">
-                                                <span class="years">2010-2013</span>
+                                                <span class="years">2012-2017</span>
                                                 <div class="vacancy-content">
                                                     <span class="title">Primary School</span>
                                                     <h4 class="subject">Darasamutr School</h4>
@@ -464,8 +463,8 @@
                                    <h2>Stay Connected</h2>
                                </div>
                                <span class="country list-inline-item animate-element delay9 fadeInUp">Si Racha, Chonburi</span>
-                               <h3 class="animate-element delay6 fadeInUp">pattanadevelop@gmail.com</h3>
-                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-7247-8128</h4>
+                               <h3 class="animate-element delay6 fadeInUp">irakanavila@gmail.com</h3>
+                               <h4 class="number list-inline-item animate-element delay10 fadeInUp">(+66) 09-4946-1442</h4>
                                <!--<div class="social-style-two mt-25 animate-element delay11 fadeInUp">
                                     <a href="#"><img src="assets/images/contact/social-dribbble.png" alt="Social"></a>
                                     <a href="#"><img src="assets/images/contact/social-behance.png" alt="Social"></a>
